# remoteVCC

./: .gitignore  LICENSE  README.md  remoteVCCrouter
client/: client.html  clientconnect.js
docs/: protocols.md  routerMessages.md
nodejsrouter/: app.js  package-lock.json  package.json
router/: app.js  package-lock.json  package.json  router.js
router/client/: client.html  client.js  clientkeyboard.js  clientpointer.js  clientscreen.js  peerstream.js
router/public/: client.html  client.js  testhost.html  testhost.js
router/public/client/: client.html  client.js  clientkeyboard.js  clientpointer.js  clientscreen.js  peerstream.js  security.js
router/public/testserver/: sender.html  sender.js
rusthost/: Cargo.toml
rusthost/src/: lib.rs
rusthost/src/router_signaller/: imp.rs  mod.rs
test/browser_server/: sender.html  sender.js
webclient/: client.html  client.js
webhost/: host.html  host.js
